--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/syntax.css">
-        <link rel="stylesheet" href="/css/ionicons.min.css">
-        <link rel="stylesheet" href="/css/chartmander.css">
+        <link rel="stylesheet" href="{{ site.project_name }}/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.project_name }}/css/ionicons.min.css">
+        <link rel="stylesheet" href="{{ site.project_name }}/css/chartmander.css">
         <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-        <script src="/js/Chartmander.js"></script>
+        <script src="{{ site.project_name }}/js/Chartmander.js"></script>
     </head>
     <body>
     {{ content }}
