--- a/_sass/chartmander.scss
+++ b/_sass/chartmander.scss
@@ -1,3 +1,10 @@
+@import "compass";
 // @import "breakpoint";
 
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
+@import "_mixins.scss";
+@import "_variables.scss";
+
 @import "_home.scss";
+
+@import "_common.scss";
