--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./css/chartmander.css">
         <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+        <script src="./js/tinycolor.js"></script>
         <script src="./js/Chartmander.js"></script>
     </head>
     <body>
