--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -1,4 +1,10 @@
+::selection {
+	background: $violet;
+	color: #FFFFFF !important;
+}
+
 body {
 	font-family: 'Roboto', sans-serif;
 	color: $text;
 }
+
