--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,5 +2,6 @@
 $text: #3D464D;
 $belasa: #b3c8dd;
 $belasita: #eaf1f7;
-$violet: #6e58ac;
-$blue: #2e92ff;
+$violet: #6633cc;
+$blue: #1e90ff;
+$green: #adff2f;
