Docs and examples

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./css/syntax.css">
-        <link rel="stylesheet" href="./css/ionicons.min.css">
-        <link rel="stylesheet" href="./css/chartmander.css">
-        <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-        <script src="./js/moment.min.js"></script>
-        <script src="./js/tinycolor.js"></script>
-        <script src="./js/Chartmander.js"></script>
-    </head>
-    <body>
-    {{ content }}
-    </body>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/syntax.css">
+    <link rel="stylesheet" href="./css/ionicons.min.css">
+    <link rel="stylesheet" href="./css/chartmander.css">
+    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="{{site.baseurl}}/js/moment.min.js"></script>
+    <script src="{{site.baseurl}}/js/tinycolor.js"></script>
+    <script src="{{site.baseurl}}/js/Chartmander.js"></script>
+  </head>
+  <body>
+  {{ content }}
+  </body>
 </html>
