--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,6 +1,7 @@
 .chartmander {
-	background: #FFFFFF;
 	position: relative;
+	@include background-image(linear-gradient(left top, $b, $f));
+	color: #FFF;
 	text-align: center;
 
 	h1 {
@@ -17,43 +18,5 @@
 		background: transparent;
 		border: 2px solid #555;
 		color: white;
-	}
-}
-
-.nav {
-	position: absolute;
-	@include rem(top, 1);
-	left: 0;
-	right: 0;
-	width: 100%;
-	@include rem(max-width, 100);
-	margin: 0 auto;
-	@include rem(padding, 0, 1);
-	a {
-		@include rem(margin-top, 1.1);
-	}
-	.link-down {
-		color: $violet;
-	}
-}
-
-#stripe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	// @include filter-gradient($blue, $violet, horizontal);
-	@include background(linear-gradient(left,  $blue, $violet));
-	height: 3px;
-}
-
-#chartmander-intro {
-
-}
-
-.list-group-item {
-	i {
-		font-size: 18px;
-		margin-right: 10px;
 	}
 }
