--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,11 @@
-<div class="nav">
+<nav class="nav">
   <div class="container">
     <h4 class="pull-left"><a href="{{site.baseurl}}/">Chartmander.js</a></h4>
     <ul class="pull-right">
-      <li><a href="{{site.baseurl}}/examples.html">Examples</a></li>
-      <li><a href="{{site.baseurl}}/docs.html">Documentation</a></li>
+      <li><a href="{{site.baseurl}}/sochi/">Sochi 2014</a></li>
+      <li><a href="{{site.baseurl}}/examples/">Examples</a></li>
+      <li><a href="{{site.baseurl}}/docs/">Documentation</a></li>
       <li><a href="https://github.com/11th/Chartmander">Download</a></li>
     </ul>
   </div>
-</div>
+</nav>
