--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
-
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/syntax.css">
-    <link rel="stylesheet" href="./css/ionicons.min.css">
-    <link rel="stylesheet" href="./css/chartmander.css">
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="{{site.baseurl}}/js/moment.min.js"></script>
-    <script src="{{site.baseurl}}/js/tinycolor.js"></script>
-    <script src="{{site.baseurl}}/js/Chartmander.js"></script>
+    <link rel="stylesheet" href="{{site.cssdir}}bootstrap.min.css">
+    <link rel="stylesheet" href="{{site.cssdir}}syntax.css">
+    <link rel="stylesheet" href="{{site.cssdir}}ionicons.min.css">
+    <link rel="stylesheet" href="{{site.cssdir}}chartmander.css">
+    <script src="{{site.jsdir}}jquery-2.1.0.min.js"></script>
+    <script src="{{site.jsdir}}bootstrap.min.js"></script>
+    <script src="{{site.jsdir}}moment.min.js"></script>
+    <script src="{{site.jsdir}}tinycolor.js"></script>
+    <script src="{{site.jsdir}}Chartmander.js"></script>
+    <script src="{{site.jsdir}}dataFactory.js"></script>
   </head>
   <body>
   {{ content }}
