--- a/_sass/sochi.scss
+++ b/_sass/sochi.scss
@@ -1,19 +1,76 @@
 @import "compass";
+@import "_mixins.scss";
+@import "_variables.scss";
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
 
-html,body {
+html, body {
 	height: 100%;
 }
+
 body {
 	@include background-image(linear-gradient(#113b6f, #267ab5));
 }
 
-.sidebar {
-	li {
-		background: #fff;
+header {
+	color: #fff;
+	text-align: center;
+}
+
+.top-nav {
+	border: none;
+	> li {
+		width: 33.33333333%;
+		background: #1A3249;
+		margin: 0;
+		text-align: center;
+		border-right: 1px solid rgba(0,0,0,.3);
+		i {
+			@include font(3);
+			@include rem(margin-right, 1);
+			vertical-align: middle;
+		}
+		a {
+			margin: 0;
+			text-transform: uppercase;
+			@include font(1.4);
+			font-weight: bold;
+			border-radius: 0px;
+			border: 0;
+			&:hover {
+				color: rgb(150,190,240);
+				background: darken(#1A3249, 2%);
+			}
+		}
+		&.active {
+			box-shadow: inset 0 -5px 0 $blue;
+			a {
+				color: #fff;
+				background: none;
+				border: 0;
+				margin: 0;
+				&:hover {
+					background: transparent;
+					border: none;
+					color: #fff;
+				}
+			}
+		}
 	}
 }
 
-.page {
-	background: rgba(255,255,255,.8);
+.panel-sochi {
+	$panel: rgba(#48647f, .8);
+	margin-bottom: 1px;
+	background: transparent;
+	border: 0;
+	.panel-heading {
+		margin-bottom: 1px;
+		@include rem(line-height, 3);
+		background: $panel;
+		border-radius: 0px;
+		color: #B5D0E9;
+	}
+	.panel-body {
+		background: $panel;
+	}
 }
