--- a/_layouts/sochi.html
+++ b/_layouts/sochi.html
@@ -12,7 +12,10 @@
     <script src="{{site.jsdir}}bootstrap.min.js"></script>
     <script src="{{site.jsdir}}moment.min.js"></script>
     <script src="{{site.jsdir}}tinycolor.js"></script>
+    <!-- Chartmander parts -->
     <script src="{{site.jsdir}}Chartmander.js"></script>
+    <!-- // <script src="{{site.jsdir}}/src/models/"></script> -->
+
     <script src="{{site.jsdir}}dataFactory.js"></script>
     <script src="{{site.jsdir}}realshadow-min.js"></script>
     <script src="{{site.jsdir}}sochi.js"></script>
