Axis always visible

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@
     <script src="{{site.jsdir}}tinycolor.js"></script>
     <script src="{{site.jsdir}}Chartmander.js"></script>
     <script src="{{site.jsdir}}dataFactory.js"></script>
+    <style>
+      .charts {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
   {{ content }}
