--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
       .charts {
         text-align: center;
       }
+      .chart {
+        background: wheat;
+      }
     </style>
   </head>
   <body>
