--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,6 +1,6 @@
 .chartmander {
 	position: relative;
-	@include background-image(linear-gradient(left top, $b, $f));
+	@include background-image(linear-gradient(left top, $blue, $green));
 	color: #FFF;
 	text-align: center;
 
