--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,3 @@
-$text: #3D464D;
-$belasa: #b3c8dd;
-$belasita: #eaf1f7;
-$violet: #6633cc;
-$blue: #1e90ff;
-$green: #adff2f;
-
-$b: #00b3d5;
-$f: #4e6bcc;
+$text: #3d464d;
+$blue: #5fa4ee;
+$green: #56e7ca;
