--- a/css/chartmander.css
+++ b/css/chartmander.css
@@ -1,1 +1,1 @@
-.cm-wrapper{position:relative;display:inline-block}.cm-tip{position:absolute;display:inline-block;background:"rgba(0,0,0,.7)";padding:10px}
+.cm-wrapper{position:relative;display:inline-block}.cm-tip{position:absolute;display:inline-block;background:rgba(0,0,0,0.7);padding:10px;border-radius:3px}.cm-tip span{color:rgba(255,255,255,0.5)}.cm-tip ul{list-style:none;margin:0;padding:0}.cm-tip li{color:rgba(255,255,255,0.6)}.cm-tip strong{color:#fff}
