--- a/press/css/fontello-codes.css
+++ b/press/css/fontello-codes.css
@@ -1,12 +1,12 @@
 
-.icon-filter:before { content: '\e801'; } /* '' */
+.icon-keyboard:before { content: '\e80b'; } /* '' */
 .icon-database:before { content: '\e806'; } /* '' */
-.icon-upload:before { content: '\e803'; } /* '' */
-.icon-tools:before { content: '\e804'; } /* '' */
-.icon-mouse:before { content: '\e809'; } /* '' */
 .icon-magic:before { content: '\e802'; } /* '' */
+.icon-mouse:before { content: '\e809'; } /* '' */
+.icon-brush-1:before { content: '\e807'; } /* '' */
+.icon-filter:before { content: '\e801'; } /* '' */
 .icon-brush:before { content: '\e800'; } /* '' */
 .icon-grid:before { content: '\e808'; } /* '' */
 .icon-ruler:before { content: '\e80a'; } /* '' */
 .icon-vector:before { content: '\e805'; } /* '' */
-.icon-brush-1:before { content: '\e807'; } /* '' */
+.icon-chart-line:before { content: '\e804'; } /* '' */
