--- a/press/css/fontello.css
+++ b/press/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?30121749');
-  src: url('../fonts/fontello.eot?30121749#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff?30121749') format('woff'),
-       url('../fonts/fontello.ttf?30121749') format('truetype'),
-       url('../fonts/fontello.svg?30121749#fontello') format('svg');
+  src: url('../fonts/fontello.eot?64680155');
+  src: url('../fonts/fontello.eot?64680155#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff?64680155') format('woff'),
+       url('../fonts/fontello.ttf?64680155') format('truetype'),
+       url('../fonts/fontello.svg?64680155#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30121749#fontello') format('svg');
+    src: url('../font/fontello.svg?64680155#fontello') format('svg');
   }
 }
 */
@@ -50,14 +50,14 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-filter:before { content: '\e801'; } /* '' */
+.icon-keyboard:before { content: '\e80b'; } /* '' */
 .icon-database:before { content: '\e806'; } /* '' */
-.icon-upload:before { content: '\e803'; } /* '' */
-.icon-tools:before { content: '\e804'; } /* '' */
-.icon-mouse:before { content: '\e809'; } /* '' */
 .icon-magic:before { content: '\e802'; } /* '' */
+.icon-mouse:before { content: '\e809'; } /* '' */
+.icon-brush-1:before { content: '\e807'; } /* '' */
+.icon-filter:before { content: '\e801'; } /* '' */
 .icon-brush:before { content: '\e800'; } /* '' */
 .icon-grid:before { content: '\e808'; } /* '' */
 .icon-ruler:before { content: '\e80a'; } /* '' */
 .icon-vector:before { content: '\e805'; } /* '' */
-.icon-brush-1:before { content: '\e807'; } /* '' */
+.icon-chart-line:before { content: '\e804'; } /* '' */
