fix pie chart sochi

--- a/_layouts/sochi.html
+++ b/_layouts/sochi.html
@@ -6,6 +6,7 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="{{site.cssdir}}bootstrap.min.css">
+    <link rel="stylesheet" href="{{site.cssdir}}chartmander.css">
     <link rel="stylesheet" href="{{site.cssdir}}sochi.css">
     <link rel="stylesheet" href="{{site.cssdir}}ionicons.min.css">
     <script src="{{site.jsdir}}jquery-2.1.0.min.js"></script>
